@@ -13,6 +13,8 @@ Revision history for Perl extension Module::Build.
 
  - For VMS: fixed prefix handling plus other test fixes [Craig Berry]
 
+ - Support anonymous array of directories for c_source [Alberto Simões]
+
 0.3603 - Mon Jan 18 22:28:59 EST 2010
 
 (Oops, I released the last one before I realized this should have been
